ComunicacionEntreMicroservicios/Despliegue en GCP/yaml/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deploy
  labels:
    app: backend1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1-pod
          image: gcr.io/microservicios03/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3010
            initialDelaySeconds: 3
            periodSeconds: 20
