ComunicacionEntreMicroservicios/Despliegue en GCP/yaml/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deploy
  labels:
    app: backend2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend1-pod
          image: gcr.io/microservicios03/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3020
            initialDelaySeconds: 3
            periodSeconds: 20
