ComunicacionEntreMicroservicios/Despliegue en GCP/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "microservices-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: frontend-svc
              servicePort: 80
          - path: /api/*
            backend:
              serviceName: backend1-svc
              servicePort: 80
          - path: /api/config
            backend:
              serviceName: frontend-svc
              servicePort: 80
